tests/semantic/record_type/record_type.dl
//
// Record Type
//
// This test checks that record types are handled correctly.
// It was created for issue #238 "Segfault: Type checker fails to detect single negative numbers if record type is expected".
//

.type record = [ X:number, Y:number ]

.decl MyRelation( X:record )

MyRelation(nil).        // no error
MyRelation([7, 7]).     // no error
MyRelation([-7, -7]).   // no error

MyRelation(0).          // error
MyRelation(7).          // error
MyRelation(-7).         // TODO: should error but doesn't
MyRelation("7").        // error
MyRelation(7, 7).       // error
MyRelation(-7, -7).     // error
MyRelation([7]).        // TODO: should error but doesn't
MyRelation([7, 7, 7]).  // error

.decl YourRelation( X:number ) output

YourRelation(x) :- MyRelation([x, _]).
